--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
@@ -16,6 +17,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.6",
     "pug": "^2.0.4"
   },
   "devDependencies": {
