--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "heroku": "^7.41.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.12",
     "morgan": "^1.10.0",
