--- a/package.json
+++ b/package.json
@@ -10,18 +10,31 @@
     "@sendgrid/mail": "^7.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "^1.4.5",
+    "debug": "^2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "heroku": "^7.41.1",
-    "http-errors": "~1.6.3",
-    "mongoose": "^5.9.12",
+    "http-errors": "^1.6.3",
+    "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  }
+  },
+  "description": "",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Walter26/foodAPI.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Walter26/foodAPI/issues"
+  },
+  "homepage": "https://github.com/Walter26/foodAPI#readme"
 }
