--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
+  "nodemonConfig": {
+    "ignore": "./temp"
+  },
   "dependencies": {
     "@sendgrid/mail": "^7.1.0",
     "bcrypt": "^4.0.1",
@@ -17,12 +20,12 @@
     "heroku": "^7.41.1",
     "http-errors": "^1.6.3",
     "mongoose": "^5.9.16",
-    "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
     "pug": "^2.0.4",
     "sendgrid": "^5.2.3"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   },
   "description": "",
