--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heroku": "^7.41.1",
     "http-errors": "^1.6.3",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "pug": "^2.0.4",
     "sendgrid": "^5.2.3"
