--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI="mongodb+srv://foodAPI:foodAPI@cluster0-azjae.mongodb.net/test?retryWrites=true&w=majority"
 PORT=3500
+ID_KEY=AKIAJ6LEPNILFA7NN5IA
+KEY=lnTjrF7NmdUuRrznUmJJoV837gQjPYiAfqov5Dfa
