--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.1.0",
+    "aws-sdk": "2.x",
     "bcrypt": "^4.0.1",
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "2.x",
     "express": "^4.16.4",
     "heroku": "^7.41.1",
     "http-errors": "^1.6.3",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.6",
-    "pug": "^2.0.4",
+    "multer-s3": "^2.9.0",
     "sendgrid": "^5.2.3"
   },
   "devDependencies": {
